JDK 8->11 experimental upgrade (glm)
Reproduces verified upgrade from JDK-Lite experiment (实验3) at commit 97f59d653f69.
Patch source: results/apache_commons-lang/glm/round-01.patch

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>